src/main/env/router/nodeport-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  ports:
    - nodePort: 32000
      port: 80
      targetPort: 80
  selector:
    app: application-http-frontend
